be specific about this. It does do the guessed letters in alphabetical order, which I do like.
This also added "press enter to play again" which I like... without prompt mind you.
2nd word was LONGERTHA! That for sure is not a top 5000 word... or a word at all?


version 3	11 minute dev	3 minute code gen	6 minute test		49 minutes total

Issues changed: a lot! I did a restart of the ChatGPT session. I need to add a lot of detail to
get it back to the original look. For truly new details, I ask for guessed letters to be shown
in alphabetical order, and to better lay out the guess letters.
There are some changes to make, but this is very close.


version 4	6 minutes dev	3 minute code gen	3 minute test		1 hour 1 min total

This was quick and easy... but minor. The lineup of the words is centered, both vertically and
horizontally. It is good. Minor UI changes are made... it's the nature of the tool.


version X	7 minutes dev	4 minute code gen	3 minute test		1 hour 15 min total

DID NOT PROCEED - RETURNING TO VERSION 4 ON NEXT ATTEMPT
Two changes. 1) increased words from 100 to 200. 2) move the end of the game UI below the guessed 
letters. The initial new list had multiple bugs: words ending in 1, words with a lower-case number.
It offered a prompt to implement with a specific library. I tried it. Before generating code, the 
following question itself contained typos. I updated the word list to try again. It appeared to try
it, and totally changed the UI. Reverted, and just updated the end of game UI.


TODO increased words from 100 to 200. 
TODO move the end of the game UI below the guessed letters.
TODO the underlines should go away after the letter there has been guessed.
TODO the hidden letter spots move on correct guesses. I'd like them to stay in place.
TODO some people like the guesses shown in alpha order. Some like chrono. Support switching; start
	with chrono


